--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body style="margin:0px;">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="./main.js" type="text/javascript"></script>
+    <script src="gl-matrix-min.js" type="text/javascript"></script>
 </body>
 
 </html>
