--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <html lang="en">
 
-<head>
+  <head>
     <title>Three.js starter tutorial</title>
     <meta charset="utf-8">
-</head>
+  </head>
 
-<body style="margin:0px;">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="./main.js" type="text/javascript"></script>
-    <script src="gl-matrix-min.js" type="text/javascript"></script>
-</body>
+  <body style="margin:0px;">
+    <script src="./main.js" type="module"></script>
+  </body>
 
 </html>
