--- a/loader.html
+++ b/loader.html
@@ -7,13 +7,21 @@
         <meta name="author" content="">
         <meta name="document-state" content="Dynamic">
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
-        <title> Welcome </title>
+        <title> Loading </title>
         <link rel="stylesheet" href="intro.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r126/three.min.js" integrity="sha512-n8IpKWzDnBOcBhRlHirMZOUvEq2bLRMuJGjuVqbzUJwtTsgwOgK5aS0c1JA647XWYfqvXve8k3PtZdzpipFjgg==" crossorigin="anonymous"></script>
         <script src="https://unpkg.com/three@0.126.0/examples/js/loaders/GLTFLoader.js"></script>
     </head>
 
     <body style="margin:0px;">
-        <script type="module" src="intro.js"></script>
+        <div class='col-lg-12'>
+            <div class="loader cube-03">
+            <div class='loader-container'>
+                <div class='cube'></div>
+                <div class='cube'></div>
+                <div class='cube'></div>
+            </div>
+            </div>
+        </div>
     </body>
 </html>
