--- a/screens/main/index.html
+++ b/screens/main/index.html
@@ -6,7 +6,8 @@
   </head>
 
   <body style="margin:0px;">
-    <script src="./main.js" type="module"></script>
+    <script src="./config.js" type="text/javascript"></script>
+    <script src="./index.js" type="module"></script>
   </body>
 
 </html>
