--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 
   <head>
-    <title>Three.js starter tutorial</title>
+    <title>Galaxy Jam</title>
     <meta charset="utf-8">
   </head>
 
