--- a/loader.html
+++ b/loader.html
@@ -8,7 +8,7 @@
         <meta name="document-state" content="Dynamic">
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
         <title> Loading </title>
-        <link rel="stylesheet" href="intro.css">
+        <link rel="stylesheet" href="loader.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r126/three.min.js" integrity="sha512-n8IpKWzDnBOcBhRlHirMZOUvEq2bLRMuJGjuVqbzUJwtTsgwOgK5aS0c1JA647XWYfqvXve8k3PtZdzpipFjgg==" crossorigin="anonymous"></script>
         <script src="https://unpkg.com/three@0.126.0/examples/js/loaders/GLTFLoader.js"></script>
     </head>
