--- a/screens/endless/index.html
+++ b/screens/endless/index.html
@@ -6,6 +6,7 @@
   </head>
 
   <body style="margin:0px;">
+    <div class="endlessrunner-container"></div>
     <script src="./config.js" type="text/javascript"></script>
     <script src="./index.js" type="module"></script>
   </body>
