add mars, jupiter, saturn, uranus

--- a/public/screens/detail/earth/index.html
+++ b/public/screens/detail/earth/index.html
@@ -13,15 +13,13 @@
     <div class="container">
       <div class="title-container">
         <div class="title">
-          <h1>Venus</h1>
-          <p>Venus is one of the planets that orbit, or travel around, 
-            the Sun in the solar system. Venus is the brightest planet 
-            in the sky when viewed from Earth. It is Earth’s nearest 
-            neighbor, coming closer to Earth than any other planet. 
-            Venus is the second planet from the Sun. Its distance 
-            from the Sun averages about 67 million miles (108 
-            million kilometers). It is the hottest planet in the 
-            solar system.</p>
+          <h1>Earth</h1>
+          <p>Earth is one of the eight planets that orbit, 
+            or travel around, the Sun in the solar system. 
+            It is the third planet from the Sun. Earth travels 
+            around the Sun at an average distance of about 93 
+            million miles (150 million kilometers). It appears 
+            bright and bluish when seen from outer space.</p>
         </div>
       </div>
     </div>
