--- a/public/screens/detail/jupiter/index.html
+++ b/public/screens/detail/jupiter/index.html
@@ -13,13 +13,14 @@
     <div class="container">
       <div class="title-container">
         <div class="title">
-          <h1>Mercury</h1>
-          <p>Mercury is one of the eight planets that orbit, 
-            or travel around, the Sun in the solar system. 
-            It is the closest planet to the Sun. Its average 
-            distance from the Sun is about 36 million miles 
-            (58 million kilometers). It travels around the 
-            Sun at a faster speed than any other planet.</p>
+          <h1>Jupiter</h1>
+          <p>Jupiter is one of the eight planets that orbit, 
+            or travel around, the Sun in the solar system. It 
+            is the largest planet in the solar system. It is 
+            bigger than all the other planets put together. 
+            Jupiter is the fifth planet from the Sun. It 
+            travels around the Sun at an average distance 
+            of about 483 million miles (778 million kilometers).</p>
         </div>
       </div>
     </div>
