--- a/public/screens/detail/saturn/index.html
+++ b/public/screens/detail/saturn/index.html
@@ -13,13 +13,14 @@
     <div class="container">
       <div class="title-container">
         <div class="title">
-          <h1>Mercury</h1>
-          <p>Mercury is one of the eight planets that orbit, 
+          <h1>Saturn</h1>
+          <p>Saturn is one of the planets that orbit, 
             or travel around, the Sun in the solar system. 
-            It is the closest planet to the Sun. Its average 
-            distance from the Sun is about 36 million miles 
-            (58 million kilometers). It travels around the 
-            Sun at a faster speed than any other planet.</p>
+            It is the second largest planet in the solar system, 
+            after Jupiter. It is known for its beautiful rings. 
+            Saturn is the sixth planet from the Sun. It travels 
+            around the Sun at an average distance of about 890 
+            million miles (1.4 billion kilometers).</p>
         </div>
       </div>
     </div>
