--- a/public/screens/detail/uranus/index.html
+++ b/public/screens/detail/uranus/index.html
@@ -13,13 +13,12 @@
     <div class="container">
       <div class="title-container">
         <div class="title">
-          <h1>Mercury</h1>
-          <p>Mercury is one of the eight planets that orbit, 
-            or travel around, the Sun in the solar system. 
-            It is the closest planet to the Sun. Its average 
-            distance from the Sun is about 36 million miles 
-            (58 million kilometers). It travels around the 
-            Sun at a faster speed than any other planet.</p>
+          <h1>Uranus</h1>
+          <p>Uranus was the first planet to be discovered 
+            after the invention of the telescope. It is the 
+            seventh planet from the Sun. It travels around 
+            the Sun at an average distance of about 1.8 billion 
+            miles (2.9 billion kilometers).</p>
         </div>
       </div>
     </div>
