--- a/public/screens/detail/venus/index.html
+++ b/public/screens/detail/venus/index.html
@@ -13,13 +13,14 @@
     <div class="container">
       <div class="title-container">
         <div class="title">
-          <h1>Mercury</h1>
-          <p>Mercury is one of the eight planets that orbit, 
-            or travel around, the Sun in the solar system. 
-            It is the closest planet to the Sun. Its average 
-            distance from the Sun is about 36 million miles 
-            (58 million kilometers). It travels around the 
-            Sun at a faster speed than any other planet.</p>
+          <h1>Venus</h1>
+          <p>Venus is one of the planets that orbit, or travel around, 
+            the Sun in the solar system. Venus is the brightest planet 
+            in the sky when viewed from Earth. It is Earth’s nearest 
+            neighbor, coming closer to Earth than any other planet. 
+            Venus is the second planet from the Sun. Its distance from 
+            the Sun averages about 67 million miles (108 million kilometers). 
+            It is the hottest planet in the solar system.</p>
         </div>
       </div>
     </div>
