--- a/public/screens/detail/mars/index.html
+++ b/public/screens/detail/mars/index.html
@@ -13,13 +13,15 @@
     <div class="container">
       <div class="title-container">
         <div class="title">
-          <h1>Mercury</h1>
-          <p>Mercury is one of the eight planets that orbit, 
-            or travel around, the Sun in the solar system. 
-            It is the closest planet to the Sun. Its average 
-            distance from the Sun is about 36 million miles 
-            (58 million kilometers). It travels around the 
-            Sun at a faster speed than any other planet.</p>
+          <h1>Mars</h1>
+          <p>Mars is one of the planets that orbit, 
+            or travel around, the Sun in the solar 
+            system. It is the fourth planet from the 
+            Sun. It is also Earth’s outer neighbor. 
+            Mars travels around the Sun at an average 
+            distance of about 142 million miles (228 
+            million kilometers). It has two small, 
+            rocky moons, Phobos and Deimos.</p>
         </div>
       </div>
     </div>
