fix: intro and some detail

--- a/public/screens/detail/mercury/index.html
+++ b/public/screens/detail/mercury/index.html
@@ -14,12 +14,16 @@
       <div class="title-container">
         <div class="title">
           <h1>Mercury</h1>
-          <p>is the smallest planet in the Solar System and the closest to the
-            Sun. Its orbit around the Sun takes 87.97 Earth days, the shortest
-            of all the Sun's planets. It is named after the Roman god Mercurius
-            (Mercury), god of commerce, messenger of the gods, and mediator
-            between gods and mortals, corresponding to the Greek god Hermes
-            (Ἑρμῆς).</p>
+          <p>Mercury is one of the eight planets that orbit, 
+          or travel around, the Sun in the solar system. 
+          It is the closest planet to the Sun. Its average 
+          distance from the Sun is about 36 million miles 
+          (58 million kilometers). It travels around the Sun 
+          at a faster speed than any other planet. Mercury has 
+          no natural satellites; besides impact craters, its 
+          only known geological features are lobed ridges or rupes 
+          that were probably produced by a period of contraction 
+          early in its history.</p>
         </div>
       </div>
     </div>
