--- a/public/screens/detail/uranus/index.html
+++ b/public/screens/detail/uranus/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Three js earth</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./../style.css">
   </head>
 
   <body>
@@ -24,7 +24,7 @@
     </div>
     <canvas class="webgl"></canvas>
 
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./../index.js"></script>
     <script type="text/javascript" src="./config.js"></script>
   </body>
 
