--- a/public/screens/main/index.html
+++ b/public/screens/main/index.html
@@ -1,13 +1,27 @@
+<!DOCTYPE html>
 <html lang="en">
 
   <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galaxy Jam</title>
-    <meta charset="utf-8">
+    <link rel="stylesheet" href="./style.css">
   </head>
 
-  <body style="margin:0px;">
-    <script src="./config.js" type="text/javascript"></script>
-    <script src="./index.js" type="module"></script>
+  <body>
+    <div class="container">
+      <div class="title-container">
+        <div class="title">
+          <h1 id="game-point">Point 0</h1>
+        </div>
+      </div>
+    </div>
+
+    <canvas class="webgl"></canvas>
+
+    <script type="module" src="./index.js"></script>
+    <script type="text/javascript" src="./config.js"></script>
   </body>
 
 </html>
