--- a/public/screens/intro/index.html
+++ b/public/screens/intro/index.html
@@ -3,9 +3,24 @@
   <head>
     <title>3 2 1 Go</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="./style.css">
   </head>
 
   <body style="margin:0px;">
+    <div class="container">
+      <div class="title-container">
+        <div class="title">
+          <div class="row center-vertical">
+            <button class="btn mode-btn" id="game-mode-btn">Game Mode</button>
+          </div>
+          <div class="row center-vertical">
+            <button class="btn mode-btn btn-gray" id="education-mode-btn">Education Mode</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <canvas class="webgl"></canvas>
     <script src="./config.js" type="text/javascript"></script>
     <script src="./index.js" type="module"></script>
   </body>
