feat: add js to send mode game or edu

--- a/public/screens/main/index.html
+++ b/public/screens/main/index.html
@@ -34,6 +34,9 @@
     <canvas class="webgl"></canvas>
 
     <script>
+      var mode = parseFloat(sessionStorage.getItem("mode"));
+      console.log("mode", mode);
+      
       var modal = document.getElementById("main-modal");
       var btn = document.getElementById("main-btn");
       var closeSpan = document.getElementsByClassName("close")[0];
