--- a/public/screens/detail/venus/index.html
+++ b/public/screens/detail/venus/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three js earth</title>
+    <title>Three js Venus</title>
     <link rel="stylesheet" href="./../style.css">
   </head>
 
