fix: add game over model

--- a/public/screens/main/index.html
+++ b/public/screens/main/index.html
@@ -33,7 +33,19 @@
             id="detail-btn">🚀 I want to explore this planet</a>
         </div>
       </div>
+    </div>
 
+    <div id="game-over-modal" class="modal modal-dialog-centered modal-lg">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h1>Game Over !</h1>
+        <div>That was a nice game.</div>
+        <div style="margin-top: 16px; margin-bottom: 12px;">
+          <a class="btn no-underline"
+            href="#" target="_blank"
+            id="detail-btn">🛸 Play Again</a>
+        </div>
+      </div>
     </div>
 
     <canvas class="webgl"></canvas>
