feat (main): add game over execution

--- a/public/screens/main/index.html
+++ b/public/screens/main/index.html
@@ -41,9 +41,8 @@
         <h1>Game Over !</h1>
         <div>That was a nice game.</div>
         <div style="margin-top: 16px; margin-bottom: 12px;">
-          <a class="btn no-underline"
-            href="#" target="_blank"
-            id="detail-btn">🛸 Play Again</a>
+          <button class="btn no-underline"
+            onclick="location.reload()">🛸 Play Again</button>
         </div>
       </div>
     </div>
