--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <script>
-        window.location.href = "./screens/main";
+        window.location.href = "./screens/main/game";
     </script>
   </body>
 </html>
