--- a/public/screens/main/game/index.html
+++ b/public/screens/main/game/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galaxy Jam</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./../style.css">
   </head>
 
   <body>
@@ -50,7 +50,7 @@
     <canvas class="webgl"></canvas>
 
     <script type="module" src="./index.js"></script>
-    <script type="text/javascript" src="./config.js"></script>
+    <script type="text/javascript" src="./../config.js"></script>
   </body>
 
 </html>
